# rpa-team-manager

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TESTING_RESULTS.md  clear-auth-data.js  docker-compose.yml  test-pmo-login.js
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: ai-systems-architect.md  cisco-network-automation.md  code-reviewer.md  data-engineering-expert.md  data-science-ml-expert.md  debugging-specialist.md  modern-web-dev-expert.md  refactoring-specialist.md  rpa-automation-expert.md  software-architecture-advisor.md  technical-documentation-writer.md  (+1 more)
backend/: .env.example  Dockerfile  database_critical_fix.sql  database_schema_alignment_fix.sql  final_roi_alerts_fix.sql  fix_gantt_chart_functionality.sql  fix_global_settings_table.sql  fix_project_roi_assignments.sql  milestone_end_date_fix.sql  package-lock.json  package.json  tsconfig.json
docs/: component-project-pmo-view.md  database-schema.md  development-setup.md  feature-pmo-analytics.md  feature-support-billing.md  pmo-api.md  support-api.md  user-guide-support.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
ml-service/: DEPLOYMENT.md  Dockerfile  Dockerfile.jupyter  README.md  docker-compose.yml  pyproject.toml  requirements.txt  simple_ml_service.py
ml-service/monitoring/: prometheus.yml
ml-service/src/api/: main.py  schemas.py
ml-service/src/config/: settings.py
ml-service/src/data/: database.py
ml-service/src/features/: feature_engineering.py
ml-service/src/models/: budget_variance_model.py  completion_time_model.py  predictor_service.py  risk_score_model.py
ml-service/src/utils/: logger.py  mlflow_manager.py  model_utils.py  monitoring.py  shap_explainer.py
ml-service/tests/: test_models.py
scripts/: backup.sh  restore.sh
(+110 files in other folders)
